Added dedicated edit profile page and logic

--- a/profile.html
+++ b/profile.html
@@ -43,12 +43,13 @@
           Credits: 0
         </p>
 
-        <button
-          id="edit-profile-btn"
-          class="bg-primary hover:bg-blue-600 text-white font-medium px-6 py-2 rounded-full transition-colors shadow-sm hidden"
+        <a
+          id="edit-profile-link"
+          href="/edit-profile.html"
+          class="bg-primary hover:bg-blue-600 text-white font-medium px-6 py-2 rounded-full transition-colors shadow-sm hidden inline-block"
         >
           Edit profile
-        </button>
+        </a>
       </div>
 
       <div class="container-custom pb-20">
