Added home page UI: create listing button, quick bid form, and templates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <main>
       <div class="container-custom py-12">
-        <section class="text-center w-full mb-16">
+        <section id="hero-section" class="text-center w-full mb-16">
           <h1 class="text-6xl font-bold text-heading-color mt-10 mb-6">
             Find your next great deal
           </h1>
@@ -132,6 +132,31 @@
                 View Details
               </a>
             </div>
+          </div>
+        </template>
+        <template id="create-listing-btn-template">
+          <div class="mt-8">
+            <a
+              href="/create-listing.html"
+              class="inline-flex items-center gap-2 bg-green-600 hover:bg-green-700 text-white text-lg font-bold px-8 py-3 rounded-full shadow-md transition-transform hover:scale-105"
+            >
+              <span class="material-symbols-outlined font-bold">add</span>
+              Create Listing
+            </a>
+          </div>
+        </template>
+        <template id="quick-bid-template">
+          <div class="bid-form-container mb-3">
+            <input
+              type="number"
+              class="bid-input w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-2 mb-2 focus:outline-none focus:ring-2 focus:ring-primary"
+              placeholder="Enter bid amount"
+            />
+            <button
+              class="bid-btn w-full bg-blue-100 hover:bg-blue-200 text-blue-700 font-bold py-2 rounded-lg transition-colors"
+            >
+              Place Bid
+            </button>
           </div>
         </template>
       </div>
