--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               placeholder="Enter bid amount"
             />
             <button
-              class="bid-btn w-full bg-blue-100 hover:bg-blue-200 text-blue-700 font-bold py-2 rounded-lg transition-colors"
+              class="bid-btn w-full bg-secondary hover:bg-hover text-white font-semibold font-primary py-3 rounded-lg transition-all transform hover:scale-105 active:scale-95"
             >
               Place Bid
             </button>
