--- a/create-listing.html
+++ b/create-listing.html
@@ -39,7 +39,7 @@
               <textarea
                 name="description"
                 rows="4"
-                placeholder="Tell us about the item..."
+                placeholder="About the item..."
                 class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none"
               ></textarea>
             </div>
