--- a/edit-profile.html
+++ b/edit-profile.html
@@ -19,13 +19,28 @@
         <form id="edit-profile-form" class="flex flex-col gap-6">
           <div>
             <label class="block text-sm font-medium text-slate-700 mb-2"
+              >Bio / About Me</label
+            >
+            <textarea
+              name="bio"
+              rows="4"
+              placeholder="Tell people about yourself..."
+              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none resize-none"
+            ></textarea>
+            <p class="text-xs text-slate-400 mt-1 text-right">
+              Max 160 characters recommended
+            </p>
+          </div>
+
+          <div>
+            <label class="block text-sm font-medium text-slate-700 mb-2"
               >Avatar URL</label
             >
             <input
               type="url"
               name="avatar"
               placeholder="https://example.com/image.jpg"
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary outline-none"
+              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
             />
           </div>
 
@@ -37,19 +52,19 @@
               type="url"
               name="banner"
               placeholder="https://example.com/banner.jpg"
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary outline-none"
+              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none"
             />
           </div>
 
           <div class="flex gap-4 mt-2">
             <a
               href="/profile.html"
-              class="px-6 py-2 text-slate-500 hover:text-slate-700 font-medium"
+              class="px-6 py-2 text-slate-500 hover:text-slate-700 font-medium flex items-center"
               >Cancel</a
             >
             <button
               type="submit"
-              class="flex-grow bg-primary hover:bg-blue-600 text-white font-bold py-2 rounded-lg transition-colors"
+              class="flex-grow bg-secondary hover:bg-hover text-white font-bold py-3 rounded-xl transition-all shadow-sm hover:shadow-md"
             >
               Save Changes
             </button>
