Fix: specific profile permissions and UI visibility for guest vs owner

--- a/profile.html
+++ b/profile.html
@@ -48,7 +48,7 @@
           <a
             id="edit-profile-link"
             href="/edit-profile.html"
-            class="bg-secondary hover:bg-hover text-white px-8 py-3 font-semibold rounded-xl text-base font-primary hidden inline-block transition-all transform hover:scale-105 shadow-md hover:shadow-lg"
+            class="bg-secondary hover:bg-hover text-white px-8 py-3 font-semibold rounded-xl text-base font-primary hidden transition-all transform hover:scale-105 shadow-md hover:shadow-lg"
           >
             Edit profile
           </a>
@@ -56,7 +56,12 @@
 
         <div class="pb-20">
           <section class="mb-12">
-            <h2 class="text-4xl font-bold text-primary mb-6">My listings</h2>
+            <h2
+              id="listings-title"
+              class="text-4xl font-bold text-primary mb-6"
+            >
+              My listings
+            </h2>
             <div id="listings-grid" class="flex flex-col gap-4">
               <p class="text-slate-400 text-center py-4">No listings found.</p>
             </div>
