--- a/login.html
+++ b/login.html
@@ -7,66 +7,70 @@
     <link href="./src/style.css" rel="stylesheet" />
   </head>
 
-  <body class="bg-slate-50 flex flex-col min-h-screen">
+  <body>
     <header id="header"></header>
 
-    <main class="flex-grow flex items-center justify-center py-12 px-4">
-      <div
-        class="w-full max-w-md bg-white rounded-xl shadow-sm border border-slate-100 p-8"
-      >
-        <h1 class="text-2xl font-bold text-heading-color text-center mb-2">
-          Welcome back
-        </h1>
-        <p class="text-center text-slate-500 mb-8">Login to manage your bids</p>
+    <main>
+      <div class="flex-grow flex items-center justify-center py-12 px-4 h-full">
+        <div
+          class="w-full max-w-md bg-white rounded-xl shadow-sm border border-slate-100 p-8"
+        >
+          <h1 class="text-3xl font-bold text-heading-color text-center mb-2">
+            Welcome back
+          </h1>
+          <p class="text-center text-slate-500 mb-8">
+            Login to manage your bids
+          </p>
 
-        <form id="login-form" class="flex flex-col gap-4">
-          <div>
-            <label
-              for="email"
-              class="block text-sm font-medium text-slate-700 mb-1"
-              >Email</label
+          <form id="login-form" class="flex flex-col gap-5">
+            <div>
+              <label
+                for="email"
+                class="block text-sm font-medium text-slate-700 mb-2"
+                >Email</label
+              >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="user@stud.noroff.no"
+                required
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none transition-all"
+              />
+            </div>
+
+            <div>
+              <label
+                for="password"
+                class="block text-sm font-medium text-slate-700 mb-2"
+                >Password</label
+              >
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="********"
+                required
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none transition-all"
+              />
+            </div>
+
+            <button
+              type="submit"
+              class="w-full bg-secondary hover:bg-hover text-white font-bold py-3 rounded-xl transition-all shadow-md hover:shadow-lg transform hover:scale-[1.02] mt-2"
             >
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="user@stud.noroff.no"
-              required
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all"
-            />
-          </div>
+              Log In
+            </button>
+          </form>
 
-          <div>
-            <label
-              for="password"
-              class="block text-sm font-medium text-slate-700 mb-1"
-              >Password</label
+          <div class="mt-6 text-center text-sm text-slate-500">
+            Don't have an account?
+            <a
+              href="/register.html"
+              class="text-secondary font-semibold hover:underline"
+              >Register</a
             >
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="********"
-              required
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all"
-            />
           </div>
-
-          <button
-            type="submit"
-            class="w-full bg-primary hover:bg-blue-600 text-white font-bold py-3 rounded-lg transition-colors mt-4 shadow-sm"
-          >
-            Log In
-          </button>
-        </form>
-
-        <div class="mt-6 text-center text-sm text-slate-500">
-          Don't have an account?
-          <a
-            href="/register.html"
-            class="text-primary font-medium hover:underline"
-            >Register</a
-          >
         </div>
       </div>
     </main>
