--- a/register.html
+++ b/register.html
@@ -7,96 +7,100 @@
     <link href="./src/style.css" rel="stylesheet" />
   </head>
 
-  <body class="bg-slate-50 flex flex-col min-h-screen">
+  <body>
     <header id="header"></header>
 
-    <main class="flex-grow flex items-center justify-center py-12 px-4">
-      <div
-        class="w-full max-w-md bg-white rounded-xl shadow-sm border border-slate-100 p-8"
-      >
-        <h1 class="text-2xl font-bold text-heading-color text-center mb-2">
-          Create an account
-        </h1>
-        <p class="text-center text-slate-500 mb-8">
-          Join the auction house today
-        </p>
+    <main>
+      <div class="flex-grow flex items-center justify-center py-12 px-4 h-full">
+        <div
+          class="w-full max-w-md bg-white rounded-xl shadow-sm border border-slate-100 p-8"
+        >
+          <h1 class="text-3xl font-bold text-heading-color text-center mb-2">
+            Create an account
+          </h1>
+          <p class="text-center text-slate-500 mb-8">
+            Join the auction house today
+          </p>
 
-        <form id="register-form" class="flex flex-col gap-4">
-          <div>
-            <label
-              for="name"
-              class="block text-sm font-medium text-slate-700 mb-1"
-              >Name</label
+          <form id="register-form" class="flex flex-col gap-5">
+            <div>
+              <label
+                for="name"
+                class="block text-sm font-medium text-slate-700 mb-2"
+                >Name</label
+              >
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Your_Name (No spaces)"
+                pattern="^[\w]+$"
+                title="Usernames can only contain letters, numbers, and underscores (_)."
+                required
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none transition-all"
+              />
+              <p class="text-xs text-slate-400 mt-1">
+                Must use a-z, 0-9, and _ only.
+              </p>
+            </div>
+
+            <div>
+              <label
+                for="email"
+                class="block text-sm font-medium text-slate-700 mb-2"
+                >Email</label
+              >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="user@stud.noroff.no"
+                pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+                title="Only @stud.noroff.no emails are allowed"
+                required
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none transition-all"
+              />
+              <p class="text-xs text-slate-400 mt-1">
+                Must be a valid @stud.noroff.no email.
+              </p>
+            </div>
+
+            <div>
+              <label
+                for="password"
+                class="block text-sm font-medium text-slate-700 mb-2"
+                >Password</label
+              >
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="********"
+                minlength="8"
+                required
+                class="w-full px-4 py-3 border border-slate-200 rounded-lg focus:ring-2 focus:ring-secondary outline-none transition-all"
+              />
+              <p class="text-xs text-slate-400 mt-1">
+                Must be at least 8 characters.
+              </p>
+            </div>
+
+            <button
+              type="submit"
+              class="w-full bg-secondary hover:bg-hover text-white font-bold py-3 rounded-xl transition-all shadow-md hover:shadow-lg transform hover:scale-[1.02] mt-2"
             >
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Your_Name (No spaces)"
-              pattern="^[\w]+$"
-              title="Usernames can only contain letters, numbers, and underscores (_)."
-              required
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all"
-            />
-            <p class="text-xs text-slate-400 mt-1">
-              Must use a-z, 0-9, and _ only.
-            </p>
-          </div>
+              Sign Up
+            </button>
+          </form>
 
-          <div>
-            <label
-              for="email"
-              class="block text-sm font-medium text-slate-700 mb-1"
-              >Email</label
+          <div class="mt-6 text-center text-sm text-slate-500">
+            Already have an account?
+            <a
+              href="/login.html"
+              class="text-secondary font-semibold hover:underline"
+              >Log in</a
             >
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="user@stud.noroff.no"
-              pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
-              title="Only @stud.noroff.no emails are allowed"
-              required
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all"
-            />
-            <p class="text-xs text-slate-400 mt-1">
-              Must be a valid @stud.noroff.no email.
-            </p>
           </div>
-
-          <div>
-            <label
-              for="password"
-              class="block text-sm font-medium text-slate-700 mb-1"
-              >Password</label
-            >
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="********"
-              minlength="8"
-              required
-              class="w-full px-4 py-2 border border-slate-200 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all"
-            />
-            <p class="text-xs text-slate-400 mt-1">
-              Must be at least 8 characters.
-            </p>
-          </div>
-
-          <button
-            type="submit"
-            class="w-full bg-primary hover:bg-blue-600 text-white font-bold py-3 rounded-lg transition-colors mt-4 shadow-sm"
-          >
-            Sign Up
-          </button>
-        </form>
-
-        <div class="mt-6 text-center text-sm text-slate-500">
-          Already have an account?
-          <a href="/login.html" class="text-primary font-medium hover:underline"
-            >Log in</a
-          >
         </div>
       </div>
     </main>
@@ -104,7 +108,6 @@
     <footer id="footer"></footer>
 
     <script type="module" src="/src/main.js"></script>
-
     <script type="module" src="/src/views/register.js"></script>
   </body>
 </html>
