--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="flex-grow text-center sm:text-left w-full">
-          <h3 class="text-xl font-medium text-heading-color mb-2 js-title"></h3>
+          <h3 class="text-xl font-medium text-primary mb-2 js-title"></h3>
 
           <div class="grid grid-cols-2 gap-4 max-w-md mx-auto sm:mx-0 mb-4">
             <div>
@@ -96,15 +96,13 @@
               <p class="text-sm text-slate-700 js-ends">Dec 31, 2025</p>
             </div>
             <div>
-              <p class="text-xs text-slate-500 uppercase">Current Bid</p>
-              <p class="text-sm font-bold text-heading-color js-bid">
-                0 Credits
-              </p>
+              <p class="text-xs text-slate-500">Current Bid</p>
+              <p class="text-sm font-bold text-secondary js-bid">0 Credits</p>
             </div>
           </div>
 
           <a
-            class="inline-block bg-primary hover:bg-blue-600 text-white text-sm font-medium px-6 py-2 rounded-lg transition-colors js-btn"
+            class="inline-block bg-secondary hover:bg-hover font-primary text-white text-sm font-medium px-6 py-2 rounded-lg transition-colors js-btn"
           >
             View Details
           </a>
